@@ -1,5 +1,9 @@
 2008-11-26  Thomas Thurman  <tthurman@gnome.org>
 
+	* tools/announce-wrangler.py (added): script to produce announcements
+
+2008-11-26  Thomas Thurman  <tthurman@gnome.org>
+
 	* src/core/xprops.c: add casts (#562106)
 
 2008-11-25  Thomas Thurman  <tthurman@gnome.org>
